plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'com.netflix.dgs.codegen' version '6.0.3'
    id 'org.hibernate.orm' version '6.4.4.Final'
    id 'org.graalvm.buildtools.native' version '0.9.28'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
    set('springAiVersion', "0.8.1")
    set('springCloudVersion', "2023.0.1")
}

dependencies {
    implementation 'io.jsonwebtoken:jjwt-api:0.11.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.3'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-graphql'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'org.springframework.cloud:spring-cloud-starter'
    implementation 'org.springframework.data:spring-data-rest-hal-explorer'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'io.github.cdimascio:java-dotenv:5.2.2'
    implementation 'org.apache.commons:commons-text:1.10.0'

    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
    runtimeOnly 'org.postgresql:postgresql'

    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.mockito', module: 'mockito-core'
    }
    testImplementation 'org.mockito:mockito-core:5.3.1'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.graphql:spring-graphql-test'
    testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc:3.0.1') {
        exclude group: 'com.vaadin.external.google', module: 'android-json'
    }

    // Mail service
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.security:spring-security-oauth2-jose'
    implementation 'com.sendgrid:sendgrid-java:4.10.1'
    implementation 'com.nimbusds:oauth2-oidc-sdk:9.19'
    implementation 'com.nimbusds:nimbus-jose-jwt:9.19'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.twilio.sdk:twilio:10.4.0'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.0'

    // Dependencias adicionales
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'javax.activation:activation:1.1.1'

    implementation 'org.json:json:20210307'

    testImplementation 'com.h2database:h2:2.1.214'

    // Mockito para Simulación de Servicios (ya incluido mediante 'mockito-core:5.3.1')
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('processTestAot') {
    enabled = false
}

tasks.named('test') {
    useJUnitPlatform()
    systemProperty 'spring.aot.enabled', 'false'
    systemProperty 'spring.test.context.aot.enabled', 'false'
}

tasks.named('asciidoctor') {
    inputs.dir snippetsDir
    dependsOn test
}

generateJava {
    schemaPaths = ["${projectDir}/src/main/resources/graphql-client"]
    packageName = 'com.geekbank.bank.codegen'
    generateClient = true
}


graalvmNative {
    test {
        // Deshabilita el soporte AOT para pruebas
        enabled = false
    }
}

hibernate {
    enhancement {
        enableAssociationManagement = true
    }
}
